Bug de overflow x

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .text-platzi {
     color: #97c93e !important;
 }
